--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ button{
 }
 .wrapper{
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     padding: 50px 5%;
